# blofeld

./: .Rbuildignore  .gitignore  Blofeld.Rproj  Cargo.toml  DESCRIPTION  NAMESPACE  README.md  blofeld.Rproj
R/: BFmodel.R  BFpop.R  Blofeld-package.R  R6utils.R  RcppExports.R  Scenario.R  ScenarioProcess.R  World.R  basic_population.R  basic_regulator.R  zzz.R
documentation/: Model Framework Project v5.docx  Model Framework Project v5.md  Model Requirement Sheet v4.docx  Model Requirement Sheet v4.md  ecs_based_framework.md  library.bib  notes.txt
inst/include/: blofeld.h  blofeld_RcppExports.h  blofeld_legacy.h  style_notes.md  test  test.cpp  testRcpp.R  testRcpp.cpp
inst/legacy/: blofeld.h  (+1 more)
man/: BFmodel.Rd  BasicPop.Rd  BasicRegulator.Rd  BasicSpread.Rd  Blofeld-package.Rd  blofeld-package.Rd
notebooks/: SimpleCattle.R  basic.R  dummy_population.R  multithreading.cpp  notes.txt  quick_multi_group.R  quick_multi_group.cpp  testRcpp.R  testRcpp.cpp  test_compartment.R
sandbox/: ASF_Mossa.R  diffusion.R  domestic_pigs.R  experimenting.R  locations.R  migration.R  multi_patch_fun.R  population.R  run_multi_patch.R  spillover.R  spread.R  test_multi_patch.R  test_multi_patch_iteration.R  test_single_patch.R  time.R  wild_boar.R
src/: RcppExports.cpp  blofeld.h  blofeld_module.cpp  compartment_example.cpp  legacy_module.cpp  rcpp_wrap_class_example.cpp  register_blofeld_class.cpp  test.cpp
src/blofeld_rust/: Cargo.toml
src/blofeld_rust/src/: des_system.rs  lib.rs  parameters.rs
tests/: testthat.R
vignettes/: Blofeld.Rmd  GOLDFINGER.Rmd  flexigroup.Rmd
(+59 files in other folders)
