[package]
name = "blofeld_rust"
version = "0.1.0"
authors = ["CGMossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
derive_more = "0.99.13"
readonly = "0.2.0"
serde = { version = "1.0.125", optional = true, features = ["derive"] }
thiserror = "1.0.24"
